Replacing InfoResource with StoredResource.

--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -78,7 +78,7 @@
             <%= render "sections/edit_tasks", { :section => s, :tasks => s.tasks, :display_new_task_form => true, :new_task => s.tasks.new } %>
           </div>
           <div class="section_content_container row" style="margin: 10px 0px 0px 0px; display:none;">
-            <%= render "sections/edit_content", { :section => s, :info_resources => s.info_resources} %>
+            <%= render "sections/edit_content", { :section => s, :stored_resources => s.stored_resources} %>
           </div>
         </section>
       </td>
