--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -10,7 +10,7 @@
   <div class="field">
     <%= f.label "Upload Picture File" %>
     <div class="input">
-      <%= f.file_field :pic %>
+      <%= f.file_field :image_resource %>
     </div>
   </div>
   <div class="actions">
