--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -13,7 +13,7 @@
         </p>
         <% if @hint %><p style="font-style:italic; font-size: 14px;"><%= @hint %></p><% end %>
       </blockquote>
-      <%= render "info_resource", { :info_resource => @info_resource } %>
+      <%= render "stored_resource", { :stored_resource => @stored_resource } %>
     </div>
     <div class="answer">
       <input type="hidden" name="task_id" value="<%= @task.id %>">
