--- a/app/views/sections/_overview.html.erb
+++ b/app/views/sections/_overview.html.erb
@@ -31,14 +31,14 @@
       </td>
       <td style="padding: 0px 10px 10px 15px; border-top:none; min-width: 278px;">
         <h5>CONTENT</h5>
-        <% if s.info_resources.empty? && s.instructions.blank? %>
+        <% if !s.has_stored_resources && s.instructions.blank? %>
         <p>You do not have any attached content for this section.</p>
         <p><a class ="edit_section_content_pill" onclick="display_section_content($(this).parents('td.section'));" style="cursor: pointer;">Add Content</a></p>
         <% else %>
           <% unless s.instructions.blank? %>
             <%= truncate(s.instructions, :length => 140) %>
           <% else %>
-            <% s.info_resources.first(2).each do |t| %>
+            <% s.stored_resources.first(2).each do |t| %>
             <p><%= t.obj_file_name %>, <%= t.obj_content_type %></p>
             <% end %>
           <% end %>
