--- a/app/views/stored_resources/_add_stored_resource.html.erb
+++ b/app/views/stored_resources/_add_stored_resource.html.erb
@@ -1,8 +1,7 @@
 <h1>New Picture</h1>
 <p>You can upload a picture for any task and have it displayed just below the question. You can use this for "identify this" type questions or just for some added visuals.</p>
-<%= form_for @info_resource, :html => { :multipart => true }  do |f| %>
+<%= form_tag({:controller => "tasks", :action => "add_stored_resource"}, :html => { :multipart => true, :method => :put })  do |f| %>
   <%= render "shared/error_messages", :object => f.object %>
-  <%= f.hidden_field :task_id %>
   <div class="field clearfix">
     <%= f.label :description %>
     <div class="input">
