--- a/app/views/companies/_tab_header.html.erb
+++ b/app/views/companies/_tab_header.html.erb
@@ -5,5 +5,6 @@
     <% if mode == "settings" %><li class="active"><a href="#">Settings</a><% else %><li><%= link_to "Settings", edit_company_path(company) %><% end %></li>
     <% if mode == "roles" %><li class="active"><a href="#">User Roles</a><% else %><li><%= link_to "User Roles", user_roles_path %><% end %></li>
     <% if mode == "styles" %><li class="active"><a href="#">Custom Styles</a><% else %><li><%= link_to "Custom Styles", company.custom_style %><% end %></li>
+    <% if mode == "achievements" %><li class="active"><a href="#">Achievements</a><% else %><li><%= link_to "Achievements", achievements_path %><% end %></li>
   </ul>
 </div>
