Finished challenge page header.

--- a/app/views/paths/_knowledge_tasks_list.html.erb
+++ b/app/views/paths/_knowledge_tasks_list.html.erb
@@ -1,4 +1,4 @@
-<div id="knowledge_tasks_list" style="<%= @show_voting ? "display:none;":"" %>">
+<div id="knowledge_tasks_list" style="<%= @show_voting ? "display:none;":"" %> padding-top: 15px;">
   <ol>
   <% @knowledge_tasks.each do |t| %>
     <% task = t[:task] %>
