Added hoverscroll on path header.

--- a/app/views/layouts/_scripts.html.erb
+++ b/app/views/layouts/_scripts.html.erb
@@ -10,4 +10,6 @@
 <script type="text/javascript" src="/javascripts/suggestions.js"></script>
 <script type="text/javascript" src="/javascripts/editor.js"></script>
 <script type="text/javascript" src="/javascripts/challenge.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.hoverscroll.min.js"></script>
+<script type="text/javascript" src="/javascripts/voting.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
