--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -97,6 +97,15 @@ section.wiki { margin-bottom: 50px; }
 .jumpstart_leaderboard td {padding:3px;}
 .jumpstart_leaderboard th {padding:3px;}
 
+/* Hoverscroll (Path Header) */
+.hoverscroll { position: relative; }
+.hoverscroll .hoverscroll_container { position: relative; overflow: hidden; }
+.hoverscroll .hoverscroll_content { position: absolute; top: 0; width: 1600px; }
+.hoverscroll .hoverscroll_left, .hoverscroll .hoverscroll_right { display: block; position: absolute; top: 15px; z-index: 999; }
+.hoverscroll .hoverscroll_left { left: 0; }
+.hoverscroll .hoverscroll_right { right: 0; }
+.hoverscroll .hoverscroll_left, .hoverscroll .hoverscroll_right { width: 40px; height: 140px; }
+
 /* Random */
 .pagination a { padding: 0 10px; line-height: 22px; height: 22px;}
 .pagination .disabled { display:none; }
