Adjusting header size

--- a/app/views/paths/_path_header.html.erb
+++ b/app/views/paths/_path_header.html.erb
@@ -1,10 +1,10 @@
-<div class="row" style="border: 2px solid #DDD; margin:0; background-color:whitesmoke; margin-bottom: 20px;">
+<div class="row" style="border: 2px solid #DDD; margin:0; background-color:whitesmoke; margin-bottom: 20px; padding: 10px; margin-top: -10px;">
   <div class="span5" style="margin:0; padding: 2px 0 0px 2px;">
     <%= image_tag @path.path_pic, :size => "250x250", :style=>"border:1px solid #DDD;" %>
   </div>
-  <div class="span11" style="margin: 0; padding:2px 0px 0px 0px; width:655px;">
+  <div class="span11" style="margin: 0; padding:2px 0px 0px 0px; width:625px;">
     <div class="row" style="height: 75px;">
-      <div style="float:left; width:400px;">
+      <div style="float:left; width:397px;">
         <h1 style="font-size: 28px;line-height:28px; margin:6px 0 4px 0;"><%= @path.name %></h1>
       </div>
       <div style="margin:5px; padding:8px; float:right; background-color: white; text-align:right; border:1px solid darkgray;">
@@ -23,7 +23,7 @@
     <div class="row hoverscroll">
       <h6 style="margin:0;padding:0;line-height:15px;color:#404040;">Recent Activity</h6>
       <div class="hoverscroll_left"></div>
-      <div class="hoverscroll_container" style="height: 150px; margin-left: -5px;">
+      <div class="hoverscroll_container" style="height: 150px; margin-left: -5px; margin-right:-10px;">
         <div class="hoverscroll_content">
         <% if @activity_stream.empty? %>
           <p style="margin:15px;">No one has taken this <%= name_for_paths %> yet. Be the first by clicking <strong>Start Challenge</strong> below!</p>
