--- a/app/views/paths/_activity_stream_item.html.erb
+++ b/app/views/paths/_activity_stream_item.html.erb
@@ -1,16 +1,16 @@
 <% if item[:type] == :event %>
-  <div class="hoverscroll_slide" style="position:relative; border:1px solid #DDD; background-color:white; height:140px; width:140px; display:inline; float:left; margin: 0 5px; padding:10px 0 0 10px; overflow:hidden;">
+  <div class="hoverscroll_slide shadow stream_item">
     <img src="<%= item[:user].profile_pic %>" height="20" width="20">
     <span><%= item[:user].name %></span>
     <p style="padding:6px; line-height: 15px; font-size: 14px;"><%= translate_user_event(item[:content]).html_safe %></p>
   </div>
 <% elsif item[:type] == :text %>
-  <div class="hoverscroll_slide" style="position:relative; border:1px solid #DDD; background-color:white; height:150px; width:140px; display:inline; float:left; margin: 0 5px; overflow:hidden;">
+  <div class="hoverscroll_slide shadow stream_item">
     <p style="padding:12px 10px; line-height: 15px; font-size: 14px;">"<%= truncate(item[:content], :length => 100) %>"</p>
     <p style="position: absolute; top: 125px; width:100%; background-color:white; font-size: 14px; padding:5px;"><%= item[:votes] %> votes</p>
   </div>
 <% else %>
-  <div class="hoverscroll_slide" style="position:relative; float:left; margin: 0 5px; border:1px solid #DDD; height:140px; width:140px;">
+  <div class="hoverscroll_slide shadow stream_item">
     <%= image_tag item[:content], :size => "140x150"%>
     <div style="position: absolute; top: 125px; background-color:white; font-size: 14px; padding:5px 0 5px 5px; width:136px;">
       <%= item[:votes] %> votes
