--- a/app/views/paths/_answer_board.html.erb
+++ b/app/views/paths/_answer_board.html.erb
@@ -1,11 +1,11 @@
 <div class="span10" style="border-left:1px solid #DDD; border-right:1px solid #DDD; padding:0px 20px;">
 <% if @must_register && @completed %>
-  <div style="height: 900px;">
+  <div style="height: 900px; padding:10px;" class="shadow">
     <p style="font-size: 18px; line-height:25px;"><%= link_to "Save your score", signin_path %> so that people can vote for your submissions, and so that you can vote on theirs!</p>
     <p style="font-size: 18px; line-height:25px;">Once you save your score, you can also take the next level of this challenge to improve your global ranking, create your own challenges and start a <%= link_to "Persona", "#" %>.</p>
   </div>
 <% elsif !@completed %>
-  <div style="height: 900px;">
+  <div style="height: 900px; padding:15px;" class="shadow">
     <p style="font-size: 18px; line-height:25px;">Complete the first level of this challenge to see where you rank on the global leaderboard and vote on other people's answers!</p>
     <% if @enrolled %>
       <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary really_big clickable_link", :style => "margin: 20px 160px;"%>
