--- a/app/views/paths/_path_header.html.erb
+++ b/app/views/paths/_path_header.html.erb
@@ -1,14 +1,17 @@
-<div class="row" style="border: 2px solid #DDD; margin:0; background-color:whitesmoke; margin-bottom: 20px; padding: 10px; margin-top: -10px;">
+<style>
+.stream_item { position:relative; height:140px; width:140px; display:inline; float:left; margin: 5px 10px; padding:10px 0 0 10px; overflow:hidden; }
+</style>
+<div class="row" style="padding: 10px; margin-top: -10px;">
   <div class="span5" style="margin:0; padding: 2px 0 0px 2px;">
-    <%= image_tag @path.path_pic, :size => "250x250", :style=>"border:1px solid #DDD;" %>
+    <%= image_tag @path.path_pic, :size => "250x250", :style=>"border:1px solid #DDD; box-shadow: 0 0 7px 2px #888;" %>
   </div>
-  <div class="span11" style="margin: 0; padding:2px 0px 0px 0px; width:625px;">
+  <div class="span11" style="margin: 0; padding:2px 0px 0px 0px; width:700px;">
     <div class="row" style="height: 75px;">
-      <div style="float:left; width:397px;">
-        <h1 style="font-size: 28px;line-height:28px; margin:6px 0 4px 0;"><%= @path.name %></h1>
+      <div style="float:left; width:397px; margin-top:4px; padding:5px;" class="">
+        <h1 style="font-size: 28px;line-height:28px; margin:6px 0 4px 3px;"><%= @path.name %></h1>
       </div>
-      <div style="margin:5px; padding:8px; float:right; background-color: white; text-align:right; border:1px solid darkgray;">
-        <div style="font-size: 18px; padding:2px;">
+      <div class="" style="margin:5px 0px 5px 5px; padding:0px; float:right; background-color: white; text-align:right;">
+        <div style="font-size: 18px; padding:0;">
           <%= current_user.name %> <%= image_tag current_user.profile_pic, :size => "15x15" %>
         </div>
         <% if @completed %>
@@ -21,9 +24,9 @@
       </div>
     </div>
     <div class="row hoverscroll">
-      <h6 style="margin:0;padding:0;line-height:15px;color:#404040;">Recent Activity</h6>
+      <h6 style="margin-left:11px;padding:0;line-height:15px;color:#404040;">Recent Activity</h6>
       <div class="hoverscroll_left"></div>
-      <div class="hoverscroll_container" style="height: 150px; margin-left: -5px; margin-right:-10px;">
+      <div class="hoverscroll_container" style="height: 160px; margin-left: -5px; margin-right:-10px;">
         <div class="hoverscroll_content">
         <% if @activity_stream.empty? %>
           <p style="margin:15px;">No one has taken this <%= name_for_paths %> yet. Be the first by clicking <strong>Start Challenge</strong> below!</p>
