--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -18,18 +18,18 @@ $(function(){
   <hr style="margin:10px;"/>
   <section>
     <div class="row">
-      <div class="span3">
+      <div class="span3" style="padding:8px;">
         <%= render "side_leaderboard" %>
       </div>
       <%= render "answer_board" %>
-      <div class="span2" style="width:110px;">
+      <div class="span2" style="width:89px;padding:2px;">
         <table>
           <% @similar_paths.each do |similar_path| %>
             <tr>
               <td style="border: none;">
                 <a href="<%= path_url(similar_path) %>">
-                  <h5 style="font-size:11px; line-height:15px;"><%= similar_path.name %></h5>
-                  <%= image_tag(similar_path.path_pic, :size => "60x60", :title => similar_path.name) %>
+                  <h5 style="font-size:11px; line-height:15px; text-align:center;"><%= similar_path.name %></h5>
+                  <%= image_tag(similar_path.path_pic, :size => "60x60", :title => similar_path.name, :style => "margin-left: 5px;") %>
                </a>
               </td>
             </tr>
