--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -40,7 +40,7 @@
           <p><strong>NOTE:</strong> Please provide the singular version of the word.</p>
         </div>
       </div>
-      <div class="actions">
+      <div class="input">
         <%= f.submit "Save", :class => "btn primary" %>
       </div>
     <% end %>
