--- a/app/views/paths/_path_header.html.erb
+++ b/app/views/paths/_path_header.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="row hoverscroll">
-      <h6 style="margin-left:11px;padding:0;line-height:15px;color:#404040;">Recent Activity</h6>
+      <h6 style="margin-left:11px;padding:0;line-height:15px;color:#404040;text-transform:none;">Recent Activity</h6>
       <div class="hoverscroll_left"></div>
       <div class="hoverscroll_container" style="height: 160px; margin-left: -5px; margin-right:-10px;">
         <div class="hoverscroll_content">
