--- a/app/views/paths/_creative_tasks_list.html.erb
+++ b/app/views/paths/_creative_tasks_list.html.erb
@@ -3,18 +3,21 @@
   <% @creative_tasks.each do |t| %>
     <% task = t[:task] %>
     <li style="margin-bottom:20px; padding-bottom:10px; border-bottom:3px solid darkgray;">
-      <a href="<%= finish_path_url(@path, :task_id => task.id) %>">
+      <a href="<%= path_url(@path, :task_id => task.id) %>">
         <p style="font-size: 22px; margin-bottom: 20px; color: #404040;"><%= task.question %></p>
       </a>
       <ol style="list-style: none; margin-left: 0;">
       <% t[:submitted_answers].each do |sa| %>
-        <li style="padding:20px; margin: 0 20px 20px 20px; border-top: 3px solid #DDD; color: #404040; <% if @current_users_answers.include?(sa.id) %> background-color:whitesmoke; <% end %>">
+        <li style="padding:10px; margin: 20px; border-top: 3px solid #DDD; color: #404040; <% if @current_users_answers.include?(sa.id) %> background-color:whitesmoke; <% end %>">
           <div style="float:right;">
             <% if @votes.include?(sa.id) %>
               <%= link_to "Voted", vote_task_path(sa.task.id, :sa_id => sa.id), :remote => true, :class => "btn primary vote_button clickable_link" %>
             <% else %>
               <%= link_to "Vote", vote_task_path(sa.task.id, :sa_id => sa.id), :remote => true, :class => "btn secondary vote_button clickable_link" %>
             <% end %>
+          </div>
+          <div class="vote_count" style="margin:10px 0px;">
+            <span class="label notice" style="font-size: 16px;">+<%= sa.total_votes %></span>
           </div>
         <% if task.answer_sub_type == 100 %>
           <blockquote><p style="font-size: 18px;"><%= sa.content %></p></blockquote>
@@ -25,18 +28,17 @@
         <% else %>
           <% raise "Invalid answer sub type." %>
         <% end %>
-          <div>
-            <span class="" style="font-size: 12px;">Posted <%= time_ago_in_words(sa.created_at) %> ago</span>
+          <% if @in_drill_down %>
+          <div class="comments" style="margin-top: 20px; margin-bottom:15px; display: block;">
+            <%= render "comments/comments", :owner => sa, :owner_type => "SubmittedAnswer", :owner_id => sa.id %>
           </div>
-          <div class="vote_count" style="margin-top:10px;">
-            <span class="label notice" style="font-size: 16px;">+<%= sa.total_votes %></span>
-          </div>
+          <% end %>
         </li>
       <% end %>
       <% unless @in_drill_down %>
         <li>
           <div style="margin:20px; padding:20px;">
-            <%= link_to "View All", finish_path_path(@path, :task_id => task.id), :style => "font-size: 18px; float:right;" %>
+            <%= link_to "View All", path_path(@path, :task_id => task.id), :style => "font-size: 18px; float:right;" %>
           </div>
         </li>
       <% end %>
