--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -125,3 +125,5 @@ section.wiki { margin-bottom: 50px; }
 .underlined { text-decoration:underline; }
 .btn.big { font-size: 18px; padding:8px; margin:10px;}
 .btn.really_big { font-size: 23px; padding:10px; margin:10px;}
+.container.body { width:990px; padding:0 10px 0 30px;  background-color:rgba(254,254,254,.9); border:1px solid #DDD; box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.25); }
+.shadow { background-color:white; box-shadow: 4px 4px 3px 2px rgba(0,0,0,0.25); }
