--- a/app/views/paths/_activity_stream_item.html.erb
+++ b/app/views/paths/_activity_stream_item.html.erb
@@ -7,13 +7,17 @@
 <% elsif item[:type] == :text %>
   <div class="hoverscroll_slide shadow stream_item">
     <p style="padding:12px 10px; line-height: 15px; font-size: 14px;">"<%= truncate(item[:content], :length => 100) %>"</p>
+    <% if @path.enable_voting %>
     <p style="position: absolute; top: 125px; width:100%; background-color:white; font-size: 14px; padding:5px;"><%= item[:votes] %> votes</p>
+    <% end %>
   </div>
 <% else %>
   <div class="hoverscroll_slide shadow stream_item">
     <%= image_tag item[:content], :size => "140x150"%>
+    <% if @path.enable_voting %>
     <div style="position: absolute; top: 125px; background-color:white; font-size: 14px; padding:5px 0 5px 5px; width:136px;">
       <%= item[:votes] %> votes
     </div>
+    <% end %>
   </div>
 <% end %>
