--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,41 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
+	
 <title><%= title %></title>
 <%= csrf_meta_tag %>
-<%= javascript_include_tag :defaults %>
-<%= render "layouts/stylesheets" %>
-<%= render "layouts/scripts" %>
+
+<%= javascript_include_tag "application" %>
+<%= stylesheet_link_tag "application" %>
+
 <% if current_user && current_user.company.custom_style %>
   <% if current_user.company.custom_style.mode == 1 || (current_user.company.custom_style.mode == 2 && @enable_administration) %>
   <style><%= current_user.company.custom_style.styles %></style>
   <% end %>
 <% end %>
+
 </head>
 <body>
 <div id="fb-root"></div>
-<script>
-var std_url = '<%= root_url %>';
-$(function(){
-  $('.locked_challenge').removeAttr("href");
-  $('.locked_challenge').click(function(){
-    $('#locked_modal').modal({
-       keyboard: true,
-       backdrop: 'static',
-       show: true
-    });
-  });
-});
-
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=276612745757646";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-$.fn.exists = function(){return this.length>0;}
-</script>
+<script>var std_url = '<%= root_url %>';</script>
 <div id="locked_modal" class="modal hide fade">
   <div class="modal-header">
     <a href="#" class="close"></a>
