--- a/app/assets/stylesheets/core.css
+++ b/app/assets/stylesheets/core.css
@@ -128,3 +128,4 @@ section.wiki { margin-bottom: 50px; }
 .container.body { width:990px; padding:0 10px 0 30px;  background-color:rgba(254,254,254,.9); border:1px solid #DDD; box-shadow: 0px 0px 7px 5px rgba(0,0,0,0.25); }
 .shadow { background-color:white; box-shadow: 4px 4px 3px 2px rgba(0,0,0,0.25); }
 body {background-color: whitesmoke; }
+.corners {background-color:green; }
