--- a/app/views/sections/games/_progress_box.html.erb
+++ b/app/views/sections/games/_progress_box.html.erb
@@ -7,7 +7,7 @@ $(function(){
 <section class="progress-box" style="margin-bottom: 50px;">
   <div style="float:right; margin-top: 10px;">
     <span class="points total">+<%= @earned_points %> Total</span>
-    <span class="timer" id="countdown_timer">00:30</span>
+    <span class="timer" id="countdown_timer"><%= @time_allotted %></span>
   </div>
   <div id="progressbar" style="float:right; margin: 4px; width: 160px; height: 28px;" alt="Progress Bar"></div>
 </section>
